testresources (1.0.0-1) unstable; urgency=medium

  * New upstream release:
    - Fixes FTBFS in Sid (Closes: #808688)
  * Switched to git tag packaging workflow.
  * Added export OSLO_PACKAGE_VERSION for pbr.
  * watch file now using github tag.
  * ran wrap-and-sort -t -a
  * Standards-Version is now 3.9.6 (no change)

 -- Thomas Goirand <zigo@debian.org>  Wed, 23 Dec 2015 14:59:37 +0000

testresources (0.2.7-4) unstable; urgency=medium

  * Drops useless build-depends on python-docutils (Closes: #635275).

 -- Thomas Goirand <zigo@debian.org>  Sat, 19 Apr 2014 18:45:55 +0800

testresources (0.2.7-3) unstable; urgency=medium

  * Correct debian/copyright (Closes: #742620).
  * Removed now useless Conflict / Replaces.

 -- Thomas Goirand <zigo@debian.org>  Sat, 19 Apr 2014 09:56:11 +0800

testresources (0.2.7-2) unstable; urgency=medium

  * Sets PKG OpenStack <openstack-devel@lists.alioth.debian.org> as maintainer,
    and Robert Collins and myself as uploader.
  * Bumps compat and debhelper to version 9.
  * Ran wrap-and-sort.
  * Using dh_python{2,3} and debhelper short style instead of CDBS and the now
    deprecated python-support.
  * Added Python 3 support.
  * Bump Standards-Version to 3.9.5
  * Added Vcs and Homepage fields.
  * debian/copyright in parseable format 1.0.
  * Switched to 3.0 (quilt) format, and added extend-diff-ignore =
    "^[^/]*[.]egg-info/" in debian/source/options.
  * Added a watch file (tracking version on pypi).
  * Runs nosetests / nosetests3 on build.

 -- Thomas Goirand <zigo@debian.org>  Mon, 24 Mar 2014 19:01:35 +0800

testresources (0.2.7-1) unstable; urgency=low

  * New upstream release
  * Build-depend on python-setuptools and python-fixtures
  * Bump Standards-Version to 3.9.4

 -- Free Ekanayaka <freee@debian.org>  Thu, 20 Jun 2013 09:57:19 +0200

testresources (0.2.4-1) unstable; urgency=low

  * New upstream release.

 -- Robert Collins <robertc@robertcollins.net>  Sat, 27 Feb 2010 10:04:22 +1100
