@@ -7,6 +7,7 @@ testresources (1.0.0-1) unstable; urgency=medium
   * watch file now using github tag.
   * ran wrap-and-sort -t -a
   * Standards-Version is now 3.9.6 (no change)
+  * Using -v flag when calling nosetests{3,}
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 23 Dec 2015 14:59:37 +0000
 
